Fix button align in card

--- a/src/components/Shared/Cards/Cards.module.css
+++ b/src/components/Shared/Cards/Cards.module.css
@@ -7,7 +7,13 @@
   justify-content: space-between;
 }
 
-.column {
+.columnLeft {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.columnRight {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
